--- a/Tft.Net/Tft.Net.csproj
+++ b/Tft.Net/Tft.Net.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Riot.Net\Riot.Net.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Clients\TftApis\" />
+  </ItemGroup>
+
 </Project>
