--- a/Lol.Net/Lol.Net.csproj
+++ b/Lol.Net/Lol.Net.csproj
@@ -4,11 +4,27 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+
+		<PackageId>Riot.Lol.Net</PackageId>
+		<Version>2.0.16</Version>
+		<Authors>Gaten</Authors>
+		<Company>Erin Wave</Company>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<RepositoryUrl>https://github.com/dongbin300/Riot.Net</RepositoryUrl>
+		<Description>RiotGames Open API wrapper for .NET includes League of Legends(LoL), Legends of Runeterra(LoR), Teamfight Tactics(TFT) and Valorant(VAL).</Description>
+		<PackageIcon>riot.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<Folder Include="Clients\LeagueClientApis\" />
 		<Folder Include="Clients\TournamentApis\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="..\Riot.Net\Icon\riot.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 	<ItemGroup>
